# vexv5_serial

./: .gitignore  Cargo.toml  LICENSE  README.md  slot_1.ini
src/: checks.rs  commands.rs  errors.rs  io.rs  lib.rs  main.rs  ports.rs  responses.rs  util.rs  v5.rs
src/commands/: extended.rs  file.rs  kv.rs  mod.rs  remote.rs  simple.rs  system.rs
src/device/: file.rs  handle.rs  mod.rs  vexdevice.rs
src/devices/: asyncdevice.rs  mod.rs  ports.rs
src/devices/asyncv5/: device.rs  mod.rs
src/devices/bluetoothv5/: mod.rs
src/devices/genericv5/: device.rs  mod.rs
src/ports/: mod.rs
src/protocol/: mod.rs  v5.rs
src/v5/: meta.rs  mod.rs
