[package]
name = "vexv5_serial"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.0.0"
serialport = "4.2.0"
anyhow = "1.0.0"
crc = "3.0.0"
chrono = "0.4"
corncobs = "0.1.1"
bitflags = "1.3.2"
bincode = "1.3.3"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }