[package]
name = "vexv5_serial"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
crc = "3.0.0"
bitflags = "1.3.2"
thiserror = "1.0.37"
async-trait = "0.1.58"
futures-util = "0.3.25"
futures = "0.3.25"
tokio-serial = "5.4.4"
tokio = { version = "1.22", features = ["full"] }
tokio-util = { version = "0.7.4", features=["compat", "io"] }
