[package]
name = "vexv5_serial"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# We depend on this because for some reason it fixes an issue with tokio-serial.
serialport = "4.2.0"
tokio-serial = "5.4.4"
anyhow = "1.0.0"
crc = "3.0.0"
bitflags = "1.3.2"
thiserror = "1.0.37"

# We do this so that tokio-serial uses the latest, fixed version of mio-serial
[patch.crates-io]
mio-serial = { git="https://github.com/berkowski/mio-serial.git" }